--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.0.4",
+        "autoprefixer": "^10.4.15",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.8.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.28",
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.4.9"
+    },
+    "dependencies": {
+        "@vitejs/plugin-react-refresh": "^1.3.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
